Se le borraron las imagenes , se modificaron los codigos de las paginas de recetas y ubicacion

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,3 +53,11 @@
     opacity: 1;
   }
 }
+
+.fuentes{
+  font-family: 'Teko', sans-serif;
+}
+.texto{
+  font-family: 'Antic Slab', serif;
+font-family: 'Teko', sans-serif;
+}
